fathom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fathom-analytics
  namespace: default
  labels:
    app: fathom-analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fathom-analytics
  template:
    metadata:
      labels:
        app: fathom-analytics
    spec:
      containers:
        - name: fathom-analytics
          image: usefathom/fathom:version-1.2.1
          ports:
            - containerPort: 8080
              name: analytics
