fathom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fathom-analytics
  namespace: default
  labels:
    app: fathom-analytics
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: analytics
      name: http
  selector:
    app: fathom-analytics
